it seems to be working

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Crystals Collector!</title>
     <link rel"stylesheet" href="assets/css/reset.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>  
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    
 </head>
 <body>
@@ -37,9 +38,9 @@
 
         <div class="win-lose">
 
-                <p>Wins: <span id="wins">0</span></p>
+                <p><span id="wins">0</span></p>
         
-                <p>Losses: <span id="losses">0</span></p>
+                <p><span id="losses">0</span></p>
 
         </div>
 
@@ -50,8 +51,8 @@
                 <input type="image" class="crystal" src="./assets/images/green diamond.png" id="greenCrystal">
               </div>
 
-        <div class="total">
-                <p>Your total score is: <span id="total-score">0</span></p>
+        <div class="playerScore">
+                <p>Your total score is: <span id="playerScore">0</span></p>
         </div>
 
     </div>
