--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 amount of points to your score.</p>
 
             <p>You win the game by matching your total score to random numbers, 
-                you lose the game if your total score goes abouve the random number.</p>
+                you lose the game if your total score goes above the random number.</p>
 
             <p>The value of each crystal is hidden from you until you click on it.</p>
 
